# multi-cam-streaming

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
docs/: INSTALLATION.md  USAGE.md
multi_cam_streaming/: __init__.py  audio_manager.py  audio_mixer.py  camera_manager.py  ffmpeg.py  frame_compositor.py
scripts/: __init__.py  camera_viewer.py
