[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-cam-streaming"
version = "1.0.0"
description = "Stream multiple USB camera feeds to YouTube from Raspberry Pi or Linux"
readme = "README.md"
authors = [
    {name = "Andreas Drollinger"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD",
    "Topic :: Multimedia :: Video :: Capture",
    "Development Status :: 4 - Beta",
]
keywords = ["raspberry pi", "youtube", "streaming", "camera", "video"]
dependencies = [
    "opencv-python>=4.5.0",
    "PyYAML>=5.4",
    "numpy>=1.19.0",
    "pygrabber; sys_platform == 'win32'",
]


[project.scripts]
stream-to-youtube = "scripts.camera_viewer:main"

[tool.setuptools.packages.find]
include = ["multi_cam_streaming*", "scripts*"]
