[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-cam-streaming"
version = "1.0.0"
description = "Stream multiple camera feeds to YouTube in real-time. Supports USB, CSI, and other OpenCV-compatible cameras."
readme = "README.md"
authors = [
    {name = "Andreas Drollinger"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Video :: Capture",
    "Development Status :: 4 - Beta",
]
keywords = ["raspberry pi", "youtube", "streaming", "camera", "video"]
dependencies = [
    "opencv-python>=4.5.0",
    "PyYAML>=5.4",
    "numpy>=1.19.0",
    "pygrabber; sys_platform == 'win32'",
    "sounddevice>=0.4.0",
    "pyudev>=0.24.0; sys_platform == 'linux'",
]


[project.scripts]
stream-to-youtube = "scripts.camera_viewer:main"

[tool.setuptools.packages.find]
include = ["multi_cam_streaming*", "scripts*"]
